--- a/028_Project.css
+++ b/028_Project.css
@@ -34,7 +34,7 @@ body {
     font-family: 'Inter', sans-serif;
     color: #fff;
     line-height: 1.6;
-    background: url("../Project/Img/Container-img.jpg") center no-repeat;
+    background: url("Img/Container-img.jpg") center no-repeat;
     background-position: top;
     background-size: 1600px;
     width: 1500px;
